Imported modules' pom